# HomeWorkNewYearVideo

./: .gitignore  README.md
HomeWorkNewYear(MSVC)/Resources/: Source.md
NewYearCUDA/: CMakeLists.txt  CalcByCenter.cpp  CalcByCenter.hpp  README.md  Script.md  axis_symmetry.cu  channel.cu  circle_mask.cu  conv.cu  conv1.cu  create_video_1.cpp  crop.cu  cuda_include.cuh  focus.cu  gaussian.cu  gaussian_blur.cu  gaussian_blur_video.cu  gradient.cu  gray.cu  main.cu  main1.cu  matrix_add.cu  merge3.cu  merge4.cu  mirror.cu  opencv_include.cuh  pingpu.cu  rand.cu  rect.cu  resize.cu  rotate.cu
NewYearCUDA/OpenCV/: channel.cpp  channel.h
NewYearCUDA/Resources/: Colors.hpp
NewYearOpenCL/: Build.md  CMakeLists.txt  Development.md  Knowledge.md  OpenCLDriver.md  Platform.md  README.md  Tokei.txt  main.cpp
NewYearOpenCL/Author/: Author.cpp  Author.h
NewYearOpenCL/CMake/OpenCL/: CMakeLists.txt  KernelBuildCheck.cpp
NewYearOpenCL/Chapter/: NewYearCardVideo.cpp  NewYearCardVideo.h
NewYearOpenCL/Chapter/Chapter_1/: Chapter.1.cpp  Chapter.1.h
NewYearOpenCL/Chapter/Chapter_2/: Chapter.2.cpp  Chapter.2.h
NewYearOpenCL/Chapter/Chapter_3/: Chapter.3.cpp  Chapter.3.h
NewYearOpenCL/Config/: Config.h  ConstVar.h  DebugVar.h  DifferentFunc.h  Path.h
NewYearOpenCL/Documents/Scenario/: Scenario.md
NewYearOpenCL/OpenCL/: CMakeLists.txt
NewYearOpenCL/OpenCL/Demo/: CMakeLists.txt  Demo.cpp  DemoMain.cpp
NewYearOpenCL/OpenCL/Demo/Draw/DrawRect/: DrawRectDemo.cpp  DrawRectDemo.h
NewYearOpenCL/OpenCL/Demo/Generate/GradientImage/: GradientImageDemo.cpp  GradientImageDemo.h
NewYearOpenCL/OpenCL/Demo/Image/Channel/: ImageChannelDemo.cpp  ImageChannelDemo.h  ImageGrayRGBDemo.cpp  ImageGrayRGBDemo.h
NewYearOpenCL/OpenCL/Demo/Image/Convolution/: ImageConvolutionDemo.cpp  ImageConvolutionDemo.h  ImageGaussianBlurDemo.cpp  ImageGaussianBlurDemo.h
NewYearOpenCL/OpenCL/Demo/Image/Crop/: ImageCropDemo.cpp  ImageCropDemo.h
NewYearOpenCL/OpenCL/Demo/Image/Mask/: ImageMaskDemo.cpp  ImageMaskDemo.h  MaskAndChannelDemo.cpp  MaskAndChannelDemo.h
NewYearOpenCL/OpenCL/Demo/Image/Merge/: ImageMergeDemo.cpp  ImageMergeDemo.h
NewYearOpenCL/OpenCL/Demo/Image/Mirror/: ImageMirrorDemo.cpp  ImageMirrorDemo.h
NewYearOpenCL/OpenCL/Demo/Image/Resize/: ImageResizeDemo.cpp  ImageResizeDemo.h
NewYearOpenCL/OpenCL/Demo/Image/ReverseColor/: ImageReverseColorDemo.cpp  ImageReverseColorDemo.h
NewYearOpenCL/OpenCL/Demo/Image/Rotate/: ImageRotateDemo.cpp  ImageRotateDemo.h
NewYearOpenCL/OpenCL/Demo/ImageConvolution/: ImageConvolutionDemo.cpp  ImageConvolutionDemo.h  ImageGaussianBlurDemo.cpp  ImageGaussianBlurDemo.h
NewYearOpenCL/OpenCL/Devices/: OpenCLDevices.cpp  OpenCLDevices.h  OpenCLDevicesList.cpp  OpenCLDevicesList.h
NewYearOpenCL/OpenCL/Image/: GaussianKernel.cpp  GaussianKernel.h  GenerateGradientImage.cpp  GenerateGradientImage.h  ImageBinarization.cpp  ImageBinaryzation.cpp  ImageBinaryzation.h  ImageChannelConvert.cpp  ImageChannelConvert.h  ImageConvolution.cpp  ImageConvolution.h  ImageCrop.cpp  ImageCrop.h  ImageGaussianBlur.cpp  ImageGaussianBlur.h  ImageGrayRGB.cpp  ImageGrayRGB.h  ImageMask.cpp  ImageMask.h  ImageMerge.cpp  ImageMerge.h  ImageMirror.cpp  ImageMirror.h  ImageResize.cpp  ImageResize.h  ImageReverseColor.cpp  ImageReverseColor.h  ImageRotate.cpp  ImageRotate.h
NewYearOpenCL/OpenCL/Image/Draw/: DrawRect.cpp  DrawRect.h
NewYearOpenCL/OpenCL/Image/Generate/: GenerateGradientImage.cpp  GenerateGradientImage.h
NewYearOpenCL/OpenCL/Include/: OpenCLError.cpp  OpenCLError.h  OpenCLFlow.cpp  OpenCLFlow.h  OpenCLInclude.cpp  OpenCLInclude.h  OpenCLMem.cpp  OpenCLMem.h  OpenCLProgram.cpp  OpenCLProgram.h  OpenCLRAII.h  OpenCLWorkFlow.cpp  OpenCLWorkFlow.h
NewYearOpenCL/OpenCL/Include/RAII/: OpenCLKernel.cpp  OpenCLKernel.h  OpenCLMem.cpp  OpenCLMem.h  OpenCLProgram.cpp  OpenCLProgram.h  OpenCLQueue.cpp  OpenCLQueue.h
NewYearOpenCL/OpenCL/Kernel/: KernelChannel.h  KernelChannel.hpp  KernelConvolution.h  KernelConvolution.hpp  KernelCrop.h  KernelCrop.hpp  KernelDrawRect.h  KernelDrawRect.hpp  KernelGaussianConvKernel.h  KernelGaussianConvKernel.hpp  KernelGenerateGradientColor.h  KernelGenerateGradientColor.hpp  KernelGenerateGradientImage.h  KernelGenerateGradientImage.hpp  KernelGrayRGB.h  KernelImageBinarization.h  KernelImageBinaryzation.h  KernelImageBinaryzation.hpp  KernelImageChannel.h  KernelImageChannel.hpp  KernelImageConvolution.h  KernelImageConvolution.hpp  KernelImageCrop.h  KernelImageCrop.hpp  KernelImageGrayRGB.h  KernelImageGrayRGB.hpp  KernelImageMerge.h  KernelImageMerge.hpp  KernelImageMirror.h  KernelImageMirror.hpp  KernelImageResize.h  KernelImageResize.hpp  KernelImageReverseColor.h  KernelImageReverseColor.hpp  KernelImageRotate.h  KernelImageRotate.hpp  KernelMaskImage.h  KernelMaskImage.hpp  KernelMerge.h  KernelMerge.hpp  (+3 more)
NewYearOpenCL/OpenCL/Kernel/Source/: DrawRect.cl  GaussianConvKernel.cl  GenerateGradientColor.cl  GenerateGradientImage.cl  GradientColorGenerate.cl  ImageBinarization.cl  ImageBinaryzation.cl  ImageChannel.cl  ImageConvolution.cl  ImageCrop.cl  ImageGray.cl  ImageGrayRGB.cl  ImageMaskCircle.cl  ImageMerge.cl  ImageMirror.cl  ImageResize.cl  ImageReverseColor.cl  ImageRotate.cl  OpenCLMemset2D.cl  OpenCLMemset2D_RGB.cl
NewYearOpenCL/OpenCL/Test/: CMakeLists.txt  TestOpenCLMatrixAdd.cpp  TestOpenCLMatrixAddFloat.cpp  TestOpenCLMatrixAddInt.cpp  TestOpenCLRect.cpp  gaussian_eigen3.cpp  matrix_add_kernel.cl  matrix_add_kernel_int.cl  progress_test.cpp
NewYearOpenCL/OpenCL/Utils/: OpenCLMemset.cpp  OpenCLMemset.h
NewYearOpenCL/OpenCV/Include/: OpenCVInclude.h
NewYearOpenCL/OpenCV/Video/: OpenCVVideo.cpp  OpenCVVideo.h
NewYearOpenCL/Resources/: Source.md
NewYearOpenCL/Resources/Image/: NewYearText.xcf
NewYearOpenCL/Utils/: Calc.cpp  Calc.h  ProgramIO.cpp  ProgramIO.h  ProgramLog.cpp  ProgramLog.h
NewYearPy/: main.py
NewYearPy/Test/: test_bin.py
NewYearPy/config/: size.py
NewYearPy/elements/: gradient_image.py  shmtu_logo.py  text.py
NewYearPy/res/: my_colors.py
Resource/: NewYearText.ai
(+3 files in other folders)
